# shaq-gui-tools

./: .gitignore  LICENSE  NOTICE.md  README.md  SPECYFIKACJA_SHAQGUI_SHAQCAST.md
.github/workflows/: release.yml  tests.yml
shaq/: LICENSE  Makefile  README.md  build_shaqfilegui_windows.ps1  fetch_ffmpeg_windows.py  pyproject.toml  shaq.spec  shaqfilegui.spec  shaqgui.spec
shaq/.github/: dependabot.yml
shaq/.github/workflows/: ci.yml  release.yml
shaq/shaq/: __main__.py  _cli.py  _file_gui.py  _file_scan.py  _gui.py  _i18n.py  _soundcard_compat.py  _sygnalista_gui.py
shaq/tests/: test_config_and_history.py  test_file_scan.py  test_shazam_regions.py  test_sygnalista_gui_import.py  test_sygnalista_user_agent.py
shaqcast/: README.md  pyproject.toml  run_gui.py  shaqcast.spec
shaqcast/shaqcast/: __main__.py  _soundcard_compat.py  audio.py  config_store.py  gui.py  icecast.py  shazam_regions.py  shoutcast.py  startup.py  streamer.py  sygnalista_gui.py
shaqcast/tests/: test_config_store.py  test_icecast.py  test_shazam_regions.py  test_shoutcast.py  test_soundcard_compat_import.py  test_startup.py  test_sygnalista_gui_import.py  test_sygnalista_user_agent.py
